--- a/21/style.css
+++ b/21/style.css
@@ -15,7 +15,7 @@ body {
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
     text-align: center;
-    width: 80%;
+    width: 85%;
     max-width: 600px;
 }
 
@@ -72,7 +72,8 @@ h1 {
 
 .game-buttons {
     display: flex;
-    justify-content: center;
+    align-items: center;
+    flex-direction: column;
     margin-top: 20px;
 }
 
@@ -98,8 +99,10 @@ button {
 }
 
 .game-button {
+    width: 200px;
     background-color: #3498db;
     color: white;
+    margin: 10px;
 }
 
 #pass, #pass-player2 {
