--- a/21/style.css
+++ b/21/style.css
@@ -105,6 +105,14 @@ button {
     margin: 10px;
 }
 
+.active-player {
+    background-color: #27517a; /* Зеленый цвет для активного игрока */
+}
+
+.inactive-player {
+    background-color: #2c3e50; /* Исходный цвет для неактивного игрока */
+}
+
 #pass, #pass-player2 {
     background-color: #e74c3c;
     color: white;
